@@ -5,11 +5,12 @@
 		<setting id="subtitles" label="Subtitles.gr" type="bool" default="true"/>
 		<setting id="xsubs" label="Xsubs.tv" type="bool" default="true"/>
 		<setting id="podnapisi" label="Podnapisi.net" type="bool" default="true"/>
-		<setting id="subs4free" label="Subs4free.info" type="bool" default="false"/>
+<!--		<setting id="subs4free" label="Subs4free.info" type="bool" default="false"/>-->
 	</category>
 	<category label="32219">
         <setting id="sorting" type="select" label="32220" lvalues="32221|32222|32223|32224" default="1"/>
 		<setting id="cache" label="32003" type="bool" default="true"/>
+		<setting id="timeout" type="slider" label="32226" default="30" range="10,10,120" option="int"/>
 	</category>
 	<category label="32211">
 		<setting type="lsep" label="xsubs.tv" />
